# krustlet

demos/wascc/uppercase/: Cargo.toml
