[package]
name = "uppercase"
version = "0.3.0"
authors = ["Brian Ketelsen <mail@bjk.fyi"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = '0.4.8'
serde = { version = "1.0.104", features = ["derive"]}
wascc-actor = "0.7"
wascc-codec = "0.7"

[profile.release]
opt-level = "s"

[workspace]
